--- a/my-app/package.json
+++ b/my-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,7 +12,11 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "antd": "^4.24.1",
+    "bootstrap": "^5.2.2",
+    "chart.js": "^2.9.4",
+    "node-sass": "^8.0.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
@@ -43,6 +48,8 @@
     ]
   },
   "devDependencies": {
+    "@types/chart.js": "^2.9.30",
+    "@types/react-chartjs-2": "^2.5.7",
     "@types/react-router-dom": "^5.3.3"
   }
 }
