--- a/my-app/package.json
+++ b/my-app/package.json
@@ -12,8 +12,10 @@
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "antd": "^4.24.1",
+    "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
     "chart.js": "^2.9.4",
+    "jsencrypt": "^3.2.1",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
@@ -21,6 +23,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
